force-app/main/default/objects/sugati__Trip_Price_History__c/sugati__Trip_Price_History__c.object-meta.xml
<CustomObject>
    <label>Trip Price History</label>
    <nameField>
        <displayFormat>TPH-{000000}</displayFormat>
        <label>Trip Price History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trip Price Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>