force-app/main/default/objects/sugati__Trip_Price_History__c/fields/sugati__S_TPH_Client_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_TPH_Client_Group__c</fullName>
    <label>Client Group</label>
    <referenceTo>sugati__Client_Group__c</referenceTo>
    <relationshipLabel>Trip Price Histories</relationshipLabel>
    <relationshipName>Trip_Price_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>