force-app/main/default/objects/sugati__Trip_Price_History__c/fields/sugati__S_TPH_Label__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_TPH_Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>