force-app/main/default/objects/sugati__Trip_Price_History__c/fields/sugati__S_TPH_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_TPH_Margin_Percent__c</fullName>
    <label>Margin Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>