force-app/main/default/objects/sugati__Trip_Price_History__c/fields/sugati__S_TPH_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_TPH_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Trip Price Histories</relationshipLabel>
    <relationshipName>Trip_Price_Histories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>