force-app/main/default/objects/sugati__Trip_Price_History__c/fields/sugati__S_TPH_Profit__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_TPH_Profit__c</fullName>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>